--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,7 @@ main .competences .graph {
     margin-bottom: 2rem;
   }
 }
-@media (min-width: 768px) and (max-width: 979px) {
+@media (max-width: 979px) {
   main .competences .graph {
     margin-right: 2rem;
   }
