--- a/css/style2.css
+++ b/css/style2.css
@@ -99,17 +99,22 @@ img {
 }
 
 h1 {
-  font-size: 5vw;
+  font-size: 4vw;
 }
-@media (min-width: 1200px) {
+@media (max-width: 979px) {
   h1 {
-    font-size: 4vw;
+    font-size: 5vw;
   }
 }
 
 h2 {
   font-weight: 500;
   font-size: 3vw;
+}
+@media (max-width: 480px) {
+  h2 {
+    font-size: 4vw;
+  }
 }
 
 p {
@@ -125,7 +130,6 @@ p {
   text-align: center;
   justify-content: center;
   align-items: center;
-  margin-top: 3vw;
 }
 
 header {
@@ -150,7 +154,7 @@ header .picture {
   height: 10vh;
   padding: 3rem 8rem;
 }
-@media (min-width: 768px) and (max-width: 979px) {
+@media (max-width: 979px) {
   header .picture {
     padding: 2rem 4rem;
   }
@@ -166,7 +170,7 @@ header .picture img {
 header .Nom p {
   font-size: 2em;
 }
-@media (min-width: 768px) and (max-width: 979px) {
+@media (max-width: 979px) {
   header .Nom p {
     font-size: 1.2em;
   }
@@ -192,7 +196,7 @@ header .menu a {
 header .menu a:hover {
   color: var(--dark-background);
 }
-@media (min-width: 768px) and (max-width: 979px) {
+@media (max-width: 979px) {
   header .menu {
     width: 25vw;
   }
@@ -218,8 +222,13 @@ header .menu a:hover {
 }
 @media (max-width: 480px) {
   .personnel {
-    height: 40vh;
-    margin-top: 0;
+    height: 50vh;
+    margin-top: 1em;
+  }
+}
+@media (max-width: 979px) {
+  .personnel {
+    height: 60vh;
   }
 }
 .personnel .picture {
@@ -227,7 +236,7 @@ header .menu a:hover {
   height: 35vw;
   padding: 3rem 8rem;
 }
-@media (min-width: 768px) and (max-width: 979px) {
+@media (max-width: 979px) {
   .personnel .picture {
     width: 45vw;
     height: 45vw;
@@ -245,7 +254,13 @@ header .menu a:hover {
 }
 @media (max-width: 480px) {
   .EMLYON {
-    height: 25vh;
+    height: 50vh;
+    margin: 0;
+  }
+}
+@media (max-width: 979px) {
+  .EMLYON {
+    height: 50vh;
     margin: 0 0 2em 0;
   }
 }
@@ -259,9 +274,10 @@ header .menu a:hover {
   max-width: 100%;
   height: 200vh;
 }
-@media (max-width: 480px) {
+@media (max-width: 979px) {
   .parcours {
     height: auto;
+    margin: 0;
   }
   .parcours h1 {
     margin: 0 0;
@@ -310,7 +326,7 @@ header .menu a:hover {
   align-items: center;
   margin: 0 2em;
 }
-@media (min-width: 768px) and (max-width: 979px) {
+@media (max-width: 979px) {
   .parcours .parcours-container .text-parcours {
     margin: 1em 2em;
   }
@@ -327,7 +343,7 @@ header .menu a:hover {
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 979px) {
   .interets {
     margin-top: 5em;
   }
@@ -338,7 +354,7 @@ header .menu a:hover {
 .interets h1 {
   margin-bottom: 1.5em;
 }
-@media (max-width: 480px) {
+@media (max-width: 979px) {
   .interets h1 {
     margin-bottom: 0.5em;
   }
@@ -353,8 +369,12 @@ header .menu a:hover {
     flex-flow: column;
     height: fit-content;
   }
+  .interets .interets-container h2 {
+    font-size: 5vw;
+    margin-bottom: 0.5em;
+  }
 }
-@media (max-width: 480px) {
+@media (max-width: 979px) {
   .interets .interets-container {
     height: fit-content;
   }
@@ -376,7 +396,7 @@ header .menu a:hover {
 .interets .interets-container .finance .finance-photo {
   padding: 2em 4em;
 }
-@media (max-width: 767px) {
+@media (max-width: 979px) {
   .interets .interets-container .finance .finance-photo {
     padding: 0;
   }
@@ -388,18 +408,12 @@ header .menu a:hover {
 @media (max-width: 480px) {
   .interets .interets-container .entreprise {
     margin-bottom: 2em;
-    padding: 0 0.8em;
   }
 }
 .interets .interets-container .entreprise .entreprise-photo {
   padding: 2em 4em;
 }
-@media (max-width: 480px) {
-  .interets .interets-container .entreprise .entreprise-photo {
-    padding: 1em 2em;
-  }
-}
-@media (max-width: 767px) {
+@media (max-width: 979px) {
   .interets .interets-container .entreprise .entreprise-photo {
     padding: 0;
   }
@@ -416,6 +430,12 @@ header .menu a:hover {
 @media (max-width: 480px) {
   .candidature {
     height: 35vh;
+    margin-top: 0;
+  }
+}
+@media (max-width: 979px) {
+  .candidature {
+    height: 50vh;
     margin-top: 0;
   }
 }
@@ -446,7 +466,7 @@ header .menu a:hover {
   display: flex;
   flex-flow: column;
 }
-@media (max-width: 480px) {
+@media (max-width: 979px) {
   .remerciements {
     height: 20vh;
     margin: 0 2em;
