--- a/scss/style2.scss
+++ b/scss/style2.scss
@@ -14,14 +14,17 @@
 }
 
 h1 {
-	font-size: 5vw;
-	@include xl {
-		font-size: 4vw;
+	font-size: 4vw;
+	@include md {
+		font-size: 5vw;
 	}
 }
 h2 {
 	font-weight: 500;
 	font-size: 3vw;
+	@include xs {
+		font-size: 4vw;
+	}
 }
 p {
 	font-size: 2vw;
@@ -34,7 +37,6 @@ p {
 	text-align: center;
 	justify-content: center;
 	align-items: center;
-	margin-top: 3vw;
 }
 
 header {
@@ -109,8 +111,11 @@ header {
 	display: flex;
 	flex-flow: column;
 	@include xs {
-		height: 40vh;
-		margin-top: 0;
+		height: 50vh;
+		margin-top: 1em;
+	}
+	@include md {
+		height: 60vh;
 	}
 	.picture {
 		width: 35vw;
@@ -131,7 +136,11 @@ header {
 	height: 100vh;
 	justify-content: center;
 	@include xs {
-		height: 25vh;
+		height: 50vh;
+		margin: 0;
+	}
+	@include md {
+		height: 50vh;
 		margin: 0 0 2em 0;
 	}
 	p {
@@ -144,11 +153,12 @@ header {
 	flex-flow: column;
 	max-width: 100%;
 	height: 200vh;
-	@include xs {
+	@include md {
 		height: auto;
 		h1 {
 			margin: 0 0;
 		}
+		margin: 0;
 	}
 	.parcours-container {
 		display: flex;
@@ -205,7 +215,7 @@ header {
 }
 
 .interets {
-	@include xs {
+	@include md {
 		margin-top: 5em;
 		h2 {
 			margin: 1em 0 0.4em 0;
@@ -213,7 +223,7 @@ header {
 	}
 	h1 {
 		margin-bottom: 1.5em;
-		@include xs {
+		@include md {
 			margin-bottom: 0.5em;
 		}
 	}
@@ -224,8 +234,12 @@ header {
 		@include xs {
 			flex-flow: column;
 			height: fit-content;
+			h2 {
+				font-size: 5vw;
+				margin-bottom: 0.5em;
+			}
 		}
-		@include xs {
+		@include md {
 			height: fit-content;
 			h2 {
 				font-size: 4vw;
@@ -241,8 +255,7 @@ header {
 			}
 			.finance-photo {
 				padding: 2em 4em;
-
-				@include sm {
+				@include md {
 					padding: 0;
 				}
 			}
@@ -252,14 +265,10 @@ header {
 			padding: 0 2em;
 			@include xs {
 				margin-bottom: 2em;
-				padding: 0 0.8em;
 			}
 			.entreprise-photo {
 				padding: 2em 4em;
-				@include xs {
-					padding: 1em 2em;
-				}
-				@include sm {
+				@include md {
 					padding: 0;
 				}
 			}
@@ -276,6 +285,10 @@ header {
 	}
 	@include xs {
 		height: 35vh;
+		margin-top: 0;
+	}
+	@include md {
+		height: 50vh;
 		margin-top: 0;
 	}
 	.qualities {
@@ -303,7 +316,7 @@ header {
 	margin: 0 4em;
 	display: flex;
 	flex-flow: column;
-	@include xs {
+	@include md {
 		height: 20vh;
 		margin: 0 2em;
 	}
