--- a/css/style2.css
+++ b/css/style2.css
@@ -99,11 +99,16 @@ img {
 }
 
 h1 {
-  font-size: 4vw;
+  font-size: 4em;
 }
 @media (max-width: 979px) {
   h1 {
-    font-size: 5vw;
+    font-size: 3em;
+  }
+}
+@media (max-width: 480px) {
+  h1 {
+    font-size: 2em;
   }
 }
 
@@ -223,7 +228,7 @@ header .menu a:hover {
 @media (max-width: 480px) {
   .personnel {
     height: 50vh;
-    margin-top: 1em;
+    margin-top: 2em;
   }
 }
 @media (max-width: 979px) {
@@ -232,14 +237,14 @@ header .menu a:hover {
   }
 }
 .personnel .picture {
-  width: 35vw;
-  height: 35vw;
+  width: 50vh;
+  height: 50vh;
   padding: 3rem 8rem;
 }
 @media (max-width: 979px) {
   .personnel .picture {
-    width: 45vw;
-    height: 45vw;
+    width: 35vh;
+    height: 35vh;
   }
 }
 .personnel p {
@@ -343,6 +348,10 @@ header .menu a:hover {
   }
 }
 
+.interets {
+  height: 150vh;
+  min-height: 900px;
+}
 @media (max-width: 979px) {
   .interets {
     margin-top: 5em;
@@ -423,6 +432,8 @@ header .menu a:hover {
   height: 100vh;
   display: flex;
   flex-flow: column;
+  min-height: 100%;
+  margin-top: 50px;
 }
 .candidature p {
   margin: 3em 2em;
