--- a/css/style2.css
+++ b/css/style2.css
@@ -91,6 +91,7 @@ img {
 .flex-container {
   display: flex;
   flex-flow: column;
+  justify-content: space-between;
   height: 100%;
   max-width: 100vw;
   background: var(--dark-background);
@@ -99,7 +100,7 @@ img {
 }
 
 h1 {
-  font-size: 4em;
+  font-size: 3.5em;
 }
 @media (max-width: 979px) {
   h1 {
@@ -350,6 +351,7 @@ header .menu a:hover {
 
 .interets {
   height: 150vh;
+  margin-top: 5em;
   min-height: 900px;
 }
 @media (max-width: 979px) {
