--- a/scss/style2.scss
+++ b/scss/style2.scss
@@ -6,6 +6,7 @@
 .flex-container {
 	display: flex;
 	flex-flow: column;
+	justify-content: space-between;
 	height: 100%;
 	max-width: 100vw;
 	background: var(--dark-background);
@@ -14,7 +15,7 @@
 }
 
 h1 {
-	font-size: 4em;
+	font-size: 3.5em;
 	@include md {
 		font-size: 3em;
 	}
@@ -219,6 +220,7 @@ header {
 
 .interets {
 	height: 150vh;
+	margin-top: 5em;
 	@include md {
 		margin-top: 5em;
 		h2 {
