--- a/css/style2.css
+++ b/css/style2.css
@@ -100,7 +100,7 @@ img {
 }
 
 h1 {
-  font-size: 3.5em;
+  font-size: 3em;
 }
 @media (max-width: 979px) {
   h1 {
@@ -115,11 +115,11 @@ h1 {
 
 h2 {
   font-weight: 500;
-  font-size: 3vw;
+  font-size: 2em;
 }
 @media (max-width: 480px) {
   h2 {
-    font-size: 4vw;
+    font-size: 1em;
   }
 }
 
@@ -435,7 +435,7 @@ header .menu a:hover {
   display: flex;
   flex-flow: column;
   min-height: 100%;
-  margin-top: 50px;
+  margin: 200px 0;
 }
 .candidature p {
   margin: 3em 2em;
@@ -478,6 +478,9 @@ header .menu a:hover {
   margin: 0 4em;
   display: flex;
   flex-flow: column;
+}
+.remerciements h1 {
+  font-size: 4em;
 }
 @media (max-width: 979px) {
   .remerciements {
