--- a/css/style2.css
+++ b/css/style2.css
@@ -170,6 +170,12 @@ header .picture {
     padding: 1rem 1.5rem;
   }
 }
+@media (max-width: 480px) {
+  header .picture {
+    width: 8vh;
+    height: 8vh;
+  }
+}
 header .picture img {
   border-radius: 50%;
 }
@@ -225,6 +231,7 @@ header .menu a:hover {
   height: 100vh;
   display: flex;
   flex-flow: column;
+  margin-top: 2em;
 }
 @media (max-width: 480px) {
   .personnel {
@@ -351,7 +358,7 @@ header .menu a:hover {
 
 .interets {
   height: 150vh;
-  margin-top: 5em;
+  margin-top: 200px;
   min-height: 900px;
 }
 @media (max-width: 979px) {
@@ -483,6 +490,16 @@ header .menu a:hover {
   font-size: 4em;
 }
 @media (max-width: 979px) {
+  .remerciements h1 {
+    font-size: 3em;
+  }
+}
+@media (max-width: 480px) {
+  .remerciements h1 {
+    font-size: 2em;
+  }
+}
+@media (max-width: 979px) {
   .remerciements {
     height: 20vh;
     margin: 0 2em;
@@ -493,7 +510,7 @@ footer {
   display: flex;
   flex-flow: column;
   text-align: center;
-  height: 100px;
+  height: 60px;
   margin: 0 0.005em;
   background: var(--footer);
   justify-content: center;
