--- a/scss/style2.scss
+++ b/scss/style2.scss
@@ -218,7 +218,9 @@ header {
 			}
 			@include xs {
 				height: auto;
-				padding: 0 1.8em;
+				p {
+					margin: 1em 2em;
+				}
 			}
 			@include sm {
 				margin: 0 1em;
@@ -242,6 +244,9 @@ header {
 		@include md {
 			margin-bottom: 0.5em;
 		}
+	}
+	@include xs {
+		margin-bottom: 100px;
 	}
 	min-height: 900px;
 	.interets-container {
@@ -268,7 +273,7 @@ header {
 			padding: 0 2em;
 			@include xs {
 				margin-bottom: 2em;
-				padding: 0 0.8em;
+				padding: 0 1em;
 			}
 			.finance-photo {
 				padding: 2em 4em;
@@ -282,6 +287,7 @@ header {
 			padding: 0 2em;
 			@include xs {
 				margin-bottom: 2em;
+				padding: 0 1em;
 			}
 			.entreprise-photo {
 				padding: 2em 4em;
@@ -304,7 +310,7 @@ header {
 	}
 	@include xs {
 		height: 35vh;
-		margin-top: 0;
+		margin: 100px 0;
 	}
 	@include md {
 		height: 50vh;
