--- a/css/style2.css
+++ b/css/style2.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html {
   font-size: 62.5%;
 }
@@ -94,9 +95,22 @@ img {
   justify-content: space-between;
   height: 100%;
   max-width: 100vw;
-  background: var(--dark-background);
+  background-image: url("../img/fond.jpg");
+  background-size: cover; /* Ajuste la taille de l'image pour couvrir toute la page */
+  background-attachment: fixed; /* Fixe l'image en arrière-plan */
+  background-position: center;
   color: var(--text-dark);
   font-family: "Roboto", sans-serif;
+}
+
+.flex-container::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 h1 {
@@ -148,6 +162,7 @@ header {
   font-weight: 400;
   letter-spacing: 0.1em;
   color: var(--text);
+  z-index: 1;
 }
 @media (max-width: 480px) {
   header {
@@ -344,6 +359,16 @@ header .menu a:hover {
   justify-content: center;
   align-items: center;
   margin: 0 2em;
+  color: var(--text-dark);
+}
+.parcours .parcours-container .text-parcours p {
+  font-size: 2vw;
+  z-index: 1;
+}
+@media (max-width: 480px) {
+  .parcours .parcours-container .text-parcours p {
+    font-size: 3vw;
+  }
 }
 @media (max-width: 979px) {
   .parcours .parcours-container .text-parcours {
@@ -500,6 +525,7 @@ header .menu a:hover {
   margin: 0 4em;
   display: flex;
   flex-flow: column;
+  z-index: 1;
 }
 .remerciements h1 {
   font-size: 4em;
@@ -530,6 +556,7 @@ footer {
   background: var(--footer);
   justify-content: center;
   align-content: center;
+  z-index: 1;
 }
 footer p {
   font-size: 1.2em;
