--- a/css/style2.css
+++ b/css/style2.css
@@ -247,6 +247,7 @@ header .menu a:hover {
   display: flex;
   flex-flow: column;
   margin-top: 2em;
+  z-index: 1;
 }
 @media (max-width: 480px) {
   .personnel {
@@ -307,6 +308,7 @@ header .menu a:hover {
   flex-flow: column;
   max-width: 100%;
   height: 200vh;
+  z-index: 1;
 }
 @media (max-width: 979px) {
   .parcours {
@@ -392,6 +394,7 @@ header .menu a:hover {
 .interets {
   height: 150vh;
   margin-top: 200px;
+  z-index: 1;
   min-height: 900px;
 }
 @media (max-width: 979px) {
@@ -483,6 +486,7 @@ header .menu a:hover {
   flex-flow: column;
   min-height: 100%;
   margin: 200px 0;
+  z-index: 1;
 }
 .candidature p {
   margin: 3em 2em;
