--- a/scss/style2.scss
+++ b/scss/style2.scss
@@ -9,9 +9,9 @@
 	justify-content: space-between;
 	height: 100%;
 	max-width: 100vw;
-	background-image: url("../img/fond.jpg");
-	background-size: cover; /* Ajuste la taille de l'image pour couvrir toute la page */
-	background-attachment: fixed; /* Fixe l'image en arrière-plan */
+	background-image: url("../img/Campus.jpg");
+	background-size: cover;
+	background-attachment: fixed;
 	background-position: center;
 	color: var(--text-dark);
 	font-family: "Roboto", sans-serif;
